@@ -1,0 +1,6 @@
+t_rmkdir.o
+t_assert.o
+../rmkdir.a
+../bin.a
+../str.a
+../error.a
