@@ -142,6 +142,7 @@ struct install_item insthier[] = {
   {INST_COPY, "open_rw.c", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "open_trunc.c", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "open_wo.c", 0, ctxt_repos, 0, 0, 0644},
+  {INST_COPY, "rmkdir.c", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "sarray_bytes.c", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "sarray_cat.c", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "sarray_chop.c", 0, ctxt_repos, 0, 0, 0644},
@@ -290,6 +291,8 @@ struct install_item insthier[] = {
   {INST_COPY, "open.h", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "read.h", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "read.h", 0, ctxt_incdir, 0, 0, 0644},
+  {INST_COPY, "rmkdir.h", 0, ctxt_repos, 0, 0, 0644},
+  {INST_COPY, "rmkdir.h", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "sarray.h", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "sarray.h", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "scan.h", 0, ctxt_repos, 0, 0, 0644},
@@ -360,6 +363,8 @@ struct install_item insthier[] = {
   {INST_COPY, "nonblock.a", "libnonblock.a", ctxt_slibdir, 0, 0, 0644},
   {INST_COPY, "open.sld", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "open.a", "libopen.a", ctxt_slibdir, 0, 0, 0644},
+  {INST_COPY, "rmkdir.sld", 0, ctxt_repos, 0, 0, 0644},
+  {INST_COPY, "rmkdir.a", "librmkdir.a", ctxt_slibdir, 0, 0, 0644},
   {INST_COPY, "sarray.sld", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "sarray.a", "libsarray.a", ctxt_slibdir, 0, 0, 0644},
   {INST_COPY, "scan.sld", 0, ctxt_repos, 0, 0, 0644},
