@@ -1,0 +1,8 @@
+#ifndef RMKDIR_H
+#define RMKDIR_H
+
+#define RMKDIR_MAX 1024
+
+int rmkdir(const char *, unsigned int);
+
+#endif
